small examples with 1k keys